data and logs/workflow_20260215_07h25.log
2026-02-15 07:25:49 - INFO - Orchestrator - Starting orchestrator
2026-02-15 07:25:49 - INFO - Orchestrator - Starting modules/1.file_retrieval.py
2026-02-15 07:25:49 - INFO -    Module    - connecting to https://data.nsw.gov.au/data/dataset/fuel-check
2026-02-15 07:25:53 - INFO -    Module    - jan2026 data file already loaded
2026-02-15 07:25:54 - INFO - Orchestrator - Conditions not met in modules/1.file_retrieval.py - Skipping Module
2026-02-15 07:25:54 - INFO - Orchestrator - Starting modules/2.transform_data.py
2026-02-15 07:25:54 - INFO - Orchestrator - Finished modules/2.transform_data.py
2026-02-15 07:25:54 - ERROR - Orchestrator - Module modules/2.transform_data.py failed with exit code 1
2026-02-15 07:25:54 - ERROR - Orchestrator - modules/2.transform_data.py errors before failure:
  File "/home/runner/work/NSW-Fuel-Price-Insights/NSW-Fuel-Price-Insights/modules/2.transform_data.py", line 87
    if config["latest_file"] = config["last_transformation"]:
       ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to subscript here. Maybe you meant '==' instead of '='?

